# hse-cg-2022

./: CMakeLists.txt  README.md  commands.txt
build-release/src/App/demo-app_autogen/EWIEGA46WW/: moc_CustomSpinBox.cpp  moc_CustomSpinBox.cpp.d
src/App/: CMakeLists.txt  FractalWindow.cpp  FractalWindow.h  GLLoader.cpp  GLLoader.h  ModelLoader.cpp  ModelLoader.h  main.cpp  shaders.qrc
src/App/Shaders/: fractal copy.fs  fractal copy.vs  fractal.fs  fractal.vs  lightning.fs  lightning.vs
src/Base/: GLWindow.hpp
